<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:scrollbars="horizontal|vertical" 
        android:scrollbarStyle="outsideInset" 
        android:fillViewport="true" >
        
        <HorizontalScrollView 
            android:id="@+id/horizontalView" 
            android:layout_height="wrap_content"
            android:scrollbars="horizontal|vertical" 
            android:layout_width="wrap_content">

		    <TableLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">
		        
		        <TableRow 
		            android:id="@+id/tableRow1"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <EditText
				        android:id="@+id/location"
				        android:ems="10"
				        android:hint="@string/city_state" />
		            
		        </TableRow>
		        
		        <TableRow 
		            android:id="@+id/tableRow2"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <Button
		        		android:id="@+id/startThreads"
		        		android:layout_marginRight="20dp"
		        		android:text="@string/buttonString" />
		            
		            <TextView
		            	android:id="@+id/timeText"
		                android:text=""
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow3"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		        	<TextView
		        		android:id="@+id/textView3"
		        		android:text="@string/yahooWeather"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		        	
		        	<TextView
		                android:id="@+id/locText"
		                android:text="@string/notAvailable"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow4"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView2"
		                android:text="@string/update"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		                android:id="@+id/updateText"
		                android:text="@string/notAvailable"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow5"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView1"
		                android:text="@string/temperature"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/currentTemp"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow6"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView4"
		                android:text="@string/condition"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/conditions"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		
		        <TableRow
		            android:id="@+id/tableRow7"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView5"
		                android:text="@string/wind"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/wind"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow8"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView6"
		                android:text="@string/humidity"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/humidity"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow9"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView8"
		                android:text="@string/sunrise"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/sunrise"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow10"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView9"
		                android:text="@string/sunset"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		            <TextView
		        		android:id="@+id/sunset"
		        		android:text="@string/notAvailable"
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		        <TableRow
		            android:id="@+id/tableRow11"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView12"
		                android:text="@string/forecast"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow12"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/forecast0"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow13"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/forecast1"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow14"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/forecast2"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow15"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/forecast3"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow16"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/forecast4"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       <TableRow
		            android:id="@+id/tableRow17"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		        		android:id="@+id/textView10"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow18"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:id="@+id/textView11"
		                android:text="@string/news"
		                android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow19"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news0"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow20"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news1"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow21"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news2"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow22"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news3"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow23"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news4"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		       	<TableRow
		            android:id="@+id/tableRow24"
		            android:layout_width="match_parent"
		            android:layout_height="match_parent">
		            
		            <TextView
		                android:layout_span="2"
		        		android:id="@+id/news5"
		        		android:text=""
		        		android:textAppearance="?android:attr/textAppearanceSmall" />
		            
		        </TableRow>
		        
		    </TableLayout>	    
	    
	    </HorizontalScrollView>
	    
    </ScrollView>

</RelativeLayout>